# blog_rs

./: Cargo.toml  input.css  justfile
assets/: output.css
scripts/: render_markdown.sh
src/: main.rs
src/app/: blog.rs  index.rs  mod.rs  navbar.rs
templates/articles/: test_article.md
templates/views/: blog.html  home.html  index.html  navbar.html
