[package]
name = "blog_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
comrak = "0.21.0"
tera = "1.19.1"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
